[package]
edition      = "2024"
name         = "gobblegobble"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "gobblegobble"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.1.0", features = ["esp32", "unstable"] }

esp-rtos = { version = "0.3.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32",
] }

esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32"] }

bt-hci = "0.8"
critical-section = "1.2.0"
embassy-executor = "0.10"
embassy-futures = "0.1"
embassy-sync = "0.7"
embassy-time = "0.5"
embedded-io = "0.7.1"
font8x8 = { version = "0.3", default-features = false }
esp-alloc = "0.10.0"
esp-println = { version = "0.17.0", features = ["esp32"] }
esp-radio = { version = "0.18.0", features = [
  "ble",
  "coex",
  "esp-alloc",
  "esp32",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.13.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
trouble-host = { version = "0.6.0", features = ["scan"] }


# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
